:recycle: Restriction 只保留渲染，工厂与连接符迁入 Restrictions